Fix incomplete side menu on smaller display

--- a/assets/sass/page.sass
+++ b/assets/sass/page.sass
@@ -1,4 +1,3 @@
 .page
   display: flex
   flex-direction: row
-  height: 100vh
